# pycobol2csv

./: README.md  convert_cobol_test_main.py  csv_config.json  setup.cfg  setup.py
pycobol2csv/: __init__.py  convert.py
testdata/test1/: DWSTUA.txt
testdata/test2/: DWSTUB.txt
