[metadata]
name = pycobol2csv
version="0.1.2"
author="Jason Li"
author_email="niomobileapp@gmail.com"
description="A Python library to convert COBOL ebcdic file to CSV format"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jasonli-lijie/pycobol2csv
project_urls =
    Bug Tracker = https://github.com/jasonli-lijie/pycobol2csv/issues
classifiers=
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT license
    Operating System :: OS Independent
    Development Status :: 3 - Alpha


    license="MIT",
    
    packages=["pycobol2csv"],
    
    download_url="https://github.com/user/reponame/archive/v_01.tar.gz",  # I explain this later on TODO!!!
    keywords=[
        "COBOL",
        "EBCDIC",
        "CSV",
    ],  # Keywords that define your package best
    install_requires=[  # I get to this in a second
        "ebcdic",
    ],
description-file = README.md